# rondy-elegant-api

./: .env  Cargo.toml  schema.sql  test.sql
db/migrations/: 1_initial_schema.sql
src/: config.rs  main.rs  model.rs  repo.rs  service.rs  timer.rs
src/model/: employee.rs  machine.rs  problem.rs  problem_detail.rs  shift.rs  spare_part.rs
src/repo/: department.rs  department_shift.rs  employee.rs  machine.rs  minimal_shift_problem.rs  note.rs  permissions.rs  problem.rs  problem_detail.rs  relations.rs  shift.rs  shift_problem.rs  spare_part.rs  syncing.rs
src/repo/relations/: shift.rs  shift_problem.rs
src/service/: department.rs  employee.rs  machine.rs  note.rs  permissions.rs  problem.rs  problem_detail.rs  relations.rs  shift.rs  shift_problem.rs  spare_part.rs  syncing.rs  task.rs
src/service/relations/: shift.rs  shift_problem.rs
