[package]
name = "elegant-rondy-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4"
uuid = { version = "^1", features = ["v4", "serde"] }
serde = "1.0.8"
serde_derive = "1.0.8"
serde_json = "1.0.2"
log = "^0.4"
env_logger = "^0.10"
sqlx = { version = "^0.6", features = [ "runtime-actix-native-tls" , "postgres", "chrono", "uuid", "json" ] }
dotenv = "^0.15"
chrono = { version = "^0.4", features = ["serde"]}
